Fixes #1012 : Horizontally aligns ui cards (#1014)
<!-- Add the issue number that is fixed by this PR (In the form Fixes #123) -->
Fixes #1012 

#### Checklist

- [X] I have read the [Contribution & Best practices Guide](https://blog.fossasia.org/open-source-developer-guide-and-best-practices-at-fossasia) and my PR follows them.
- [X] My branch is up-to-date with the Upstream `development` branch.
- [ ] I have added necessary documentation (if appropriate)

### Preview Link 

- **Replace XXX with your PR no**
- Link to live demo: http://pr-XXX-fossasia-badgeyay.surge.sh  

#### Changes proposed in this pull request:

- Adds Horizontal view for my-badges
- This allows us to consume space efficiently

Cheers!
@djmgit @yashLadha @ParthS007 please review and merge

--- a/frontend/app/styles/partials/my-badges.scss
+++ b/frontend/app/styles/partials/my-badges.scss
@@ -3,3 +3,8 @@
   position: relative;
   top: 80px;
 }
+
+.ui.card {
+  display: inline-block;
+  margin-right: 50px;
+}
